Revert "refactor: Replace `Arrays.asList` with `List.of` in tests"
This reverts commit 378e88c52f55d5fecdde7bf32e2370dfd5232c12.